force-app/main/default/objects/Care_Program__c/Care_Program__c.object-meta.xml
<CustomObject>
    <label>Care Program</label>
    <pluralLabel>Care Programs</pluralLabel>
    <nameField>
        <label>Care Program Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Master definition for a pharmaceutical care program (e.g., Commercial Copay, Free Drug, Bridge, Hub Services). Patient-specific participation is tracked via Patient Support Plans (Cases).</description>
</CustomObject>