force-app/main/default/objects/Care_Program__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <description>Detailed description of the care program and its benefits.</description>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>