force-app/main/default/objects/Care_Program__c/fields/Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_End_Date__c</fullName>
    <label>Effective End Date</label>
    <description>Date when this care program is no longer available for new enrollments.</description>
    <type>Date</type>
</CustomField>