force-app/main/default/objects/Care_Program__c/fields/Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Start_Date__c</fullName>
    <label>Effective Start Date</label>
    <description>Date when this care program becomes available.</description>
    <type>Date</type>
</CustomField>