force-app/main/default/objects/Care_Program__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name</label>
    <description>The pharmaceutical product associated with this care program.</description>
    <type>Text</type>
    <length>100</length>
</CustomField>