force-app/main/default/objects/Care_Program__c/fields/Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Code__c</fullName>
    <label>Program Code</label>
    <description>Unique code identifying this care program. Used as an external ID for integration and deduplication.</description>
    <type>Text</type>
    <length>20</length>
    <required>true</required>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>