force-app/main/default/objects/Care_Program__c/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <label>Program Type</label>
    <description>The type of care program offered.</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial Copay</fullName>
            </value>
            <value>
                <fullName>Free Drug</fullName>
            </value>
            <value>
                <fullName>Bridge</fullName>
            </value>
            <value>
                <fullName>Hub Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>