force-app/main/default/objects/Care_Program__c/fields/Therapy_Area__c.field-meta.xml
<CustomField>
    <fullName>Therapy_Area__c</fullName>
    <label>Therapy Area</label>
    <description>The therapeutic area this program addresses (e.g., Oncology, Immunology).</description>
    <type>Text</type>
    <length>100</length>
</CustomField>